2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs:
	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs:
	Add CacheId property that can be used to uniqued ID an item within a list.

	* src/Core/Banshee.Services/Banshee.Database/BansheeDbFormatMigrator.cs:
	Notify the Library about the metadata-refreshed tracks after closing the
	user job so it doesn't look like it's hung.

	* src/Core/Banshee.Services/Banshee.Sources/DatabaseSource.cs:
	* src/Core/Banshee.ThickClient/Banshee.Gui/TrackActions.cs: SpawnFromMain
	a few methods.

	* src/Core/Banshee.Services/Banshee.Database/BansheeModelCache.cs:
	* src/Core/Banshee.Services/Banshee.Database/BansheeModelProvider.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelProvider.cs:
	* src/Libraries/Hyena/Makefile.am:
	* src/Libraries/Hyena/Hyena.Data.Sqlite/ICacheableItem.cs: New interface
	containing CacheId property that *ModelCache and *ModelProvider classes
	require.

2008-03-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.Core/Banshee.Collection/TrackInfo.cs: Change 
	AudiblyEqual to TrackEqual since it makes more sense; make the base 
	comparison compare the track URIs

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
	Override TrackEqual and use database IDs for comparisons since that
	is much more efficient; not complete however; renamed DbId to TrackId

	* src/Core/Banshee.Services/Banshee.Collection.Database/TrackListDatabaseModel.cs:
	* src/Core/Banshee.Services/Banshee.Library/LibraryImportManager.cs:
	* src/Core/Banshee.Services/Banshee.MediaEngine/PlayerEngineService.cs:
	Changed to use TrackId instead of DbId

2008-03-10  Aaron Bockover  <abock@gnome.org>

	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/UserJobTile.cs: