@@ -1,5 +1,10 @@
 2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>
 
+	* src/Libraries/Hyena/Hyena.Data.Sqlite/SqliteModelCache.cs: Fix bug with
+	inconsistent table name in SQL.
+
+2008-03-10  Gabriel Burt  <gabriel.burt@gmail.com>
+
 	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseTrackInfo.cs:
 	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryAlbumInfo.cs:
 	* src/Core/Banshee.Services/Banshee.Collection.Database/LibraryArtistInfo.cs:
